# LSPScript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
error-msgs/: default
example-codes/: spm-arith-test.lsp
include/: ast.h  basic.h  error-handling.h  hash.h  lspi-terminal.h  lspi-types.h  token.h
src/: ast.cc  error-handling.cc  exec.cc  main.cc  parser.cc  scanner.cc  token.cc  utils.cc  visualizer.cc
tests/: ast-test-2.lsp  ast-test.lsp  ce-test.lsp  exec-test.lsp  mat-mul-test.lsp  scope-test.lsp  spm-arith-test.lsp  tokenizer-test-2.lsp  tokenizer-test-3.lsp  tokenizer-test.lsp
